--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
+
 {
-  "name": "pix-code-js",
-  "version": "1.0.0",
+  "name": "manda-o-pix",
+  "version": "2.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/higorkonig/pix-code-js.git",
   "author": "Higor Konig <higor.konig@gmail.com>",
   "license": "MIT",
+  "description": "Uma biblioteca que gera o qrcode e o pixcode de forma simples e rápida.",
+  "keywords": ["Pix", "QrCode"],
   "scripts": {
     "build": "tsc --declaration",
     "dev": "ts-node-dev --respawn --transpile-only src/teste.ts"
   },
   "devDependencies": {
     "@types/node": "^18.6.5",
+    "@types/qrcode": "^1.4.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "qrcode": "^1.5.1"
   }
 }
+
